src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__deep_nested_list.snap
---
source: src/parsing/snapshot_tests.rs
expression: normalized_content
---
- "!BulletList":
    items:
      - - "<some-uuid>"
        - content: Item 1
          segments: ~
          level: 0
          children:
            - content: Item 1.1
              segments: ~
              level: 1
              children:
                - content: Item 1.1.1
                  segments: ~
                  level: 2
                  children:
                    - content: Item 1.1.1.1
                      segments: ~
                      level: 3
                      children: []
                      nested_content: []
                      marker: Dash
                    - content: Item 1.1.1.2
                      segments: ~
                      level: 3
                      children: []
                      nested_content: []
                      marker: Dash
                  nested_content: []
                  marker: Dash
                - content: Item 1.1.2
                  segments: ~
                  level: 2
                  children: []
                  nested_content: []
                  marker: Dash
              nested_content: []
              marker: Dash
            - content: Item 1.2
              segments: ~
              level: 1
              children:
                - content: Item 1.2.1
                  segments: ~
                  level: 2
                  children: []
                  nested_content: []
                  marker: Dash
              nested_content: []
              marker: Dash
          nested_content: []
          marker: Dash
      - - "<some-uuid>"
        - content: Item 2
          segments: ~
          level: 0
          children:
            - content: Item 2.1
              segments: ~
              level: 1
              children: []
              nested_content: []
              marker: Dash
          nested_content: []
          marker: Dash
      - - "<some-uuid>"
        - content: Item 3
          segments: ~
          level: 0
          children: []
          nested_content: []
          marker: Dash
