src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__nested_bullet_list.snap
---
source: src/parsing/snapshot_tests.rs
expression: doc.content
---
- BulletList:
    items:
      - - 6a13805f-9d5c-4cf6-bf3a-4f3096577a6d
        - content: Parent item
          segments: ~
          level: 0
          children:
            - content: Child item
              segments: ~
              level: 1
              children: []
              nested_content: []
            - content: Another child
              segments: ~
              level: 1
              children: []
              nested_content: []
          nested_content: []
      - - de4cae06-905f-443c-9627-c34d24a0fe57
        - content: Second parent
          segments: ~
          level: 0
          children: []
          nested_content: []
