src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__simple_bullet_list.snap
---
source: src/parsing/snapshot_tests.rs
expression: normalized_content
---
- "!BulletList":
    items:
      - - "<some-uuid>"
        - content: First item
          segments: ~
          level: 0
          children: []
          nested_content: []
          marker: Dash
      - - "<some-uuid>"
        - content: Second item
          segments: ~
          level: 0
          children: []
          nested_content: []
          marker: Dash
      - - "<some-uuid>"
        - content: Third item
          segments: ~
          level: 0
          children: []
          nested_content: []
          marker: Dash
