src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__single_item.snap
---
source: src/parsing/snapshot_tests.rs
expression: normalized_content
---
- "!BulletList":
    items:
      - - "<some-uuid>"
        - content: Single item
          segments: ~
          level: 0
          children: []
          nested_content: []
          marker: Dash
