src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__wiki_links_mixed.snap
---
source: src/parsing/snapshot_tests.rs
expression: normalized_content
---
- "!Heading":
    level: 1
    text: Heading
- "!Paragraph":
    segments:
      - "!Text": "Paragraph with "
      - "!WikiLink":
          target: Getting-Started
      - "!Text": " link."
- "!BulletList":
    items:
      - - "<some-uuid>"
        - content: "List item with [[journal/2024-01-15]] reference"
          segments:
            - "!Text": "List item with "
            - "!WikiLink":
                target: journal/2024-01-15
            - "!Text": " reference"
          level: 0
          children: []
          nested_content: []
      - - "<some-uuid>"
        - content: "Another item with [[1_Projects/Website]] link"
          segments:
            - "!Text": "Another item with "
            - "!WikiLink":
                target: 1_Projects/Website
            - "!Text": " link"
          level: 0
          children: []
          nested_content: []
