src/parsing/snapshots/markdown_neuraxis__parsing__snapshot_tests__wiki_links_paragraph.snap
---
source: src/parsing/snapshot_tests.rs
expression: doc.content
---
- Paragraph:
    segments:
      - Text: "This paragraph has "
      - WikiLink:
          target: Simple-Link
      - Text: " and "
      - WikiLink:
          target: Folder/Page
      - Text: " references."
